--- a/src/global.css
+++ b/src/global.css
@@ -167,6 +167,7 @@ body::-webkit-scrollbar-track {
   position: absolute;
   text-align: center;
   margin-top: 32px;
+  overflow: hidden;
   margin-left: calc((100vw / 2) - 8px);
   z-index: 99999;
 }
